<resources>
    <string name="app_name" translatable="false">Symphony</string>
    <string name="full_app_name" translatable="false">Symphony Music Player Reborn</string>
    <string name="album_art_content_description">Album art</string>
    <string name="drag_handle_content_description">Drag handle</string>
    <string name="folder_art_content_description">Folder</string>
    <string name="shuffle_button_content_description">Shuffle button</string>
    <string name="skip_previous_button_content_description">Skip previous button</string>
    <string name="play_pause_button_content_description">Play/Pause button</string>
    <string name="skip_next_button_content_description">Skip next button</string>
    <string name="repeat_button_content_description">Repeat button</string>
    <string name="menu_button_content_description">Menu button</string>
    <string name="songs_title">Songs</string>
    <string name="albums_title">Albums</string>
    <string name="artists_title">Artists</string>
    <string name="genres_title">Genres</string>
    <string name="folders_title">Folders</string>
    <string name="playlists_title">Playlists</string>
    <string name="last_fm_api_key" translatable="false">e00781178e40640ef20c8c2fa210016d</string>
    <string name="in_app_billing_api_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuKzcPr8zZ2O/mZ6zFpUqBWkYpV9wrg2GYGVV1MYSKVWIqPDjQHxTY9xaBQBhV4bfUhq2ZrQ6+oGoScVJAYCYNil68wQk2UuvdLAtKBpmZT/N6tFs6GquPPBUxvVFgwr66PmabcOlvLJnR5tqwlGbcna4Gnz3qx5m+sjaGN3fCKrJaaIn7g5xuzsCUqzbzdICfJulKJarTe+nF0fx0oGKG8PactBT/gXym0Z/AK17Nkgx+aZDsKGzHcf/PhYM73cwlVogJI2w4jPvRx1acqlVpiV6sdqo1gRTfuK2PH/T2h+Q8k+qiyNvYXspXFIP09/0Iv4RxPe7MmWMoXhHrdzviQIDAQAB</string>
    <string name="fanart_api_key" translatable="false">63de1e3e4f0a665a32845437e8f2715d</string>
    <string name="artist_get_image_from_fanart" translatable="false">https://webservice.fanart.tv/v3/music/%s&amp;?api_key=%s&amp;format=json</string>
    <string name="artist_get_info" translatable="false">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo&amp;artist=%s&amp;api_key=%s&amp;format=json&amp;autocorrect=1</string>
    <string name="artist_get_id" translatable="false">http://musicbrainz.org/ws/2/artist/?query=artist:%s</string>
    <string name="artist_get_information" translatable="false">http://musicbrainz.org/ws/2/artist/%s?inc=url-rels</string>
    <string name="get_image_url" translatable="false">https://commons.wikimedia.org/w/api.php?action=query&amp;prop=imageinfo&amp;iiprop=url&amp;redirects&amp;format=json&amp;iiurlwidth=500&amp;titles=%s</string>
    <string name="artist_song_details_placeholder">%1$s Album(s) • %2$s Track(s)</string>
    <string name="artist_song_count_placeholder">%d Track(s)</string>
    <string name="artist_album_count_placeholder">%d Album(s)</string>
    <string name="biography">Biography</string>
    <string name="number_of_songs_placeholder">%d Song(s)</string>
    <string name="freq_text_greater_than_ninenininine">%d kHz</string>
    <string name="freq_text_less_than_onezerozerozero">%d Hz</string>
    <string name="add_to_queue_toast">%d song(s) added to queue</string>
    <string name="add_to_playlist_toast">%d song(s) added to playlist</string>
    <string name="track_name">Track name</string>
    <string name="album_name">Album name</string>
    <string name="artist_name">Artist name</string>
    <string name="album_artist_name">Album artist name</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>
    <string name="follow_hootan_on_twitter">Follow Hootan on Twitter</string>
    <string name="follow_josh_on_twitter">Follow Josh on Twitter</string>
    <string name="josh_joubert" translatable="false">Josh Joubert</string>
    <string name="current_status">Currently I\'m employed as a Systems Engineer Specialist at Infosys.</string>
    <string name="name">Name: Projjal Sengupta</string>
    <string name="share_app">Share This App</string>
    <string name="share_app_text">Share this app with everyone. It helps me quite a lot!</string>
    <string name="rate_app">Rate This App</string>
    <string name="rate_app_text">Rate this app 5 stars on Play Store if you like it. It keeps me motivated. :)</string>
    <string name="support_development">Support development</string>
    <string name="about_me">About Me (Developer)</string>
    <string name="credits_icon">Credits (Icon)</string>
    <string name="hootan_baraary" translatable="false">Hootan Baraary</string>
    <string name="licenses">Licenses</string>
    <string name="about_symphony_text">Symphony is a power packed music player for Android 4.4 and up and higher focused on performance</string>
    <string name="version" translatable="false">Version 6.0.1</string>
    <string name="error_text">Due to an error, the app has crashed. Please report it using the email button. That will help a lot</string>
    <string name="app_info">App Info</string>
    <string name="pro_features">Pro features</string>
    <string name="fade_text">By enabling this feature, the audio will fade in/fade out on resuming/pausing a track.</string>
    <string name="visualizer_customizations">Visualizer Customizations</string>
    <string name="and_many_more">And many more to come in the near future…</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="edit_song_info">Edit song info</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="create_playlist">Create playlist</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="add_lyrics">Add lyrics</string>
    <string name="search_lyrics">Search lyrics</string>
    <string name="favorite_button">Favorite</string>
    <string name="lyrics">Lyrics</string>
    <string name="pro_donate">Buy PRO / Donate</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="share_using">"Share using…"</string>
    <string name="no_song_is_playing">No songs played yet</string>
    <string name="search_hint">Search…</string>
    <string name="library">Library</string>
    <string name="edit_metadata">"Edit metadata"</string>
    <string name="touch">Touch</string>
    <string name="to_start">to start</string>
    <string name="please_wait_message">Please wait…</string>
    <string name="editing_song">Editing song…</string>
    <string name="loading_song">Loading song…</string>
    <string name="loading">Loading…</string>
    <string name="no_lyrics">No lyrics</string>
    <string name="no_biography">No biography found</string>
    <string name="loading_lyrics">Loading lyrics…</string>
    <string name="start_db" translatable="false">-15db</string>
    <string name="end_db" translatable="false">+15db</string>
    <string name="bassboost">Bass boost</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="select_preset_reverb">Select Reverb</string>
    <string name="select_preset">Select preset</string>
    <string name="volume">Volume</string>
    <string name="unlock_pro">Unlock PRO (Dev)</string>
    <string name="unlocked_pro">Successfully unlocked</string>
    <string name="unlock_pro_content">Enter secret code</string>
    <string name="buy_pro">Buy PRO version to unlock this feature</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure_deleting">Sure about deleting the song?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel_label">Cancel</string>
    <string name="error_label">Error</string>
    <string name="add_to_playlist_instruction">Add to playlist…</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="sleep_timer_hint">Enter after what amount of time the playback will stop</string>
    <string name="theme">Theme</string>
    <string name="theme_footer">Choose theme</string>
    <string name="now_playing">Now playing</string>
    <string name="headset">Headset</string>
    <string name="others">Others</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="blacklist">Blacklist</string>
    <string name="playback">Playback</string>
    <string name="language">Language</string>
    <string name="language_footer">Choose language</string>
    <string name="enable_or_disable">Enable or disable</string>
    <string name="general_settings">General Settings</string>
    <string name="start_page">Start page</string>
    <string name="start_page_footer">Select default page</string>
    <string name="equalizer">Equalizer</string>
    <string name="use_default_notification">Use android default mediastyle notification</string>
    <string name="album_grid">Album grid</string>
    <string name="now_playing_style">Unlock 4+ Now playing styles</string>
    <string name="now_playing_style_footer">Select now playing style</string>
    <string name="visualizer_speed">Visualizer speed</string>
    <string name="visualizer_speed_footer">Select visualizer speed (Doesn\'t work for circular visualizer)</string>
    <string name="pause_on_disconnect">Pause on disconnect</string>
    <string name="gapless_playback">Gapless playback</string>
    <string name="gapless_playback_footer">Gapless playback is enabled by default. :)</string>
    <string name="fade">Fade</string>
    <string name="visualizer_type">Visualizer type</string>
    <string name="visualizer_type_footer">Choose visualizer type</string>
    <string name="main_screen">Main screen</string>
    <string name="notification">Notification</string>
    <string name="queue_in_notification">Show queue in notification</string>
    <string name="accent_color" translatable="false">Accent Color</string>
    <string name="add_queue_to_playlist">Add queue to playlist</string>
    <string name="clear_queue">Clear queue</string>
    <string name="go_to_album">Go to Album</string>
    <string name="go_to_artist">Go to Artist</string>
    <string name="clear_cache">Clear cache</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="download_only_on_wifi">Download artist images only on WIFI</string>
    <string name="colorize_elements_according_to_album_art">Colorize elements according to Album art / Artist image</string>
    <string name="tab_titles_mode">3 Tab title mode</string>
    <string name="tab_titles_mode_footer">Select tab titles mode</string>
    <string name="alternate_main_screen">Use alternate main screen layout</string>
    <string name="sort_order">Sort order</string>
    <string name="title">Title</string>
    <string name="grid_size">Grid size</string>
    <string name="style">Style</string>
    <string name="plain">Plain</string>
    <string name="card">Card</string>
    <string name="outline">Outline</string>
    <string name="colored">Colored</string>
    <string name="choose_accent_color">Choose accent color</string>
    <string name="image_type">Image type</string>
    <string name="image_type_text">Select image type</string>
    <string name="unlock_now_playing">Unlock 4+ now playing styles</string>
    <string name="unlock_tab_titles_mode">3 tab title modes</string>
    <string name="unlock_visualizer_type">3 visualizer types</string>
    <string name="circular">Circular</string>
</resources>