<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/language"
        app:iconSpaceReserved="false">
        <Preference
            android:key="language"
            android:summary="@string/language_footer"
            android:title="@string/language"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/theme"
        app:iconSpaceReserved="false">
        <Preference
            android:key="theme"
            android:summary="@string/theme_footer"
            android:title="@string/theme"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="accentColor"
            android:summary="@string/choose_accent_color"
            android:title="@string/accent_color"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="colorizeElementsAccordingToAlbumArt"
            android:summary="@string/enable_or_disable"
            android:title="@string/colorize_elements_according_to_album_art"
            app:iconSpaceReserved="false" />

        <Preference
            android:defaultValue="true"
            android:key="imageType"
            android:summary="@string/image_type"
            android:title="@string/image_type_text"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/playback"
        app:iconSpaceReserved="false">
        <Preference
            android:key="gapless_playback"
            android:summary="@string/gapless_playback_footer"
            android:title="@string/gapless_playback"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:key="fade"
            android:summary="@string/enable_or_disable"
            android:title="@string/fade"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/main_screen"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="false"
            android:key="mainScreenStyle"
            android:title="@string/alternate_main_screen"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="defaultPage"
            android:summary="@string/start_page_footer"
            android:title="@string/start_page"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="tabTitlesMode"
            android:summary="@string/tab_titles_mode_footer"
            android:title="@string/tab_titles_mode"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/now_playing"
        app:iconSpaceReserved="false">
        <Preference
            android:key="nowPlayingStyle"
            android:summary="@string/now_playing_style_footer"
            android:title="@string/now_playing_style"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="visualizerType"
            android:summary="@string/visualizer_type_footer"
            android:title="@string/visualizer_type"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="visualizerSpeed"
            android:summary="@string/visualizer_speed_footer"
            android:title="@string/visualizer_speed"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/notification"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="useMediaStyleNotification"
            android:summary="@string/enable_or_disable"
            android:title="@string/use_default_notification"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            android:key="showQueueInNotification"
            android:summary="@string/enable_or_disable"
            android:title="@string/queue_in_notification"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/headset"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pauseOnDisconnect"
            android:summary="@string/enable_or_disable"
            android:title="@string/pause_on_disconnect"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/others"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:defaultValue="true"
            android:key="downloadOnlyOnWifi"
            android:summary="@string/enable_or_disable"
            android:title="@string/download_only_on_wifi"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="clearCache"
            android:title="@string/clear_cache"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>