<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_play"
        android:title="@string/play" />
    <item
        android:id="@+id/action_play_next"
        android:title="@string/play_next" />
    <item
        android:id="@+id/action_add_to_queue"
        android:title="@string/add_to_queue" />
    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/go_to_artist" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_song_info" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share" />
    <item
        android:id="@+id/action_set_as_ringtone"
        android:title="@string/set_as_ringtone"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />
</menu>
